[gd_scene load_steps=3 format=2]

[ext_resource path="res://LoseScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/restart.png" type="Texture" id=2]

[node name="LoseScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
editor/display_folded = true
margin_right = 1025.0
margin_bottom = 602.0
expand = true

[node name="RussianText" type="RichTextLabel" parent="Background"]
margin_left = 427.0
margin_top = 178.0
margin_right = 515.0
margin_bottom = 231.0
text = "Russian Text"

[node name="EnglishText" type="RichTextLabel" parent="Background"]
margin_left = 425.46
margin_top = 338.352
margin_right = 517.46
margin_bottom = 378.352
text = "English Text"

[node name="Restart" type="TextureButton" parent="."]
margin_left = 428.0
margin_top = 482.0
margin_right = 506.0
margin_bottom = 525.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
